--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   },
   "homepage": "https://github.com/penjoe/book-app-api#readme",
   "dependencies": {
+    "chalk": "^4.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.2",
     "express": "^4.17.1",
     "method-override": "^3.0.0",
+    "nodemon": "^2.0.3",
     "pg": "^8.0.3",
     "superagent": "^5.2.2"
   }
